@@ -2,18 +2,20 @@ package www.exam.janvier.mapper;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-import www.exam.janvier.DTO.FdsDTO;
-import www.exam.janvier.DTO.ProduitDTO;
+import www.exam.janvier.dto.FdsDTO;
+import www.exam.janvier.dto.ProduitDTO;
 import www.exam.janvier.entity.ProduitEntity;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ProduitMapper {
 
+    private final FdsMapper fdsMapper;
     @Autowired
-    private FdsMapper fdsMapper;
+    public ProduitMapper(FdsMapper fdsMapper) {
+        this.fdsMapper=fdsMapper;
+    }
     public ProduitDTO convertToDTO(ProduitEntity produit) {
         ProduitDTO produitDTO = new ProduitDTO();
         produitDTO.setId(produit.getId());
@@ -21,8 +23,7 @@ public class ProduitMapper {
 
         List<FdsDTO> fdsDTOs = produit.getFichesSecurite()
                 .stream()
-                .map(fiche -> fdsMapper.convertToDTO(fiche))
-                .collect(Collectors.toList());
+                .map(fdsMapper::convertToDTO).toList();
         produitDTO.setFiches(fdsDTOs);
 
         return produitDTO;
